--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="shortcut icon" type="image/x-icon" href="pngs/butterflies.png" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -63,6 +64,7 @@
   <div class="container text-left">
     <h1>Aspen Lara</h1>      
     <p class="titles">Software Engineer. Designer. Creative.</p>
+    <p style="font-size: 16px;">I'm a FullStack Developer from Louisville, KY who works with AngularJS, Java, and SQL. Coding and designing systems are my passion, and I aim to improve user experiences where I can.</p>
   </div>
 
 </div>
@@ -71,7 +73,7 @@
   <h3>My Work</h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <p>Some text..</p>
+      <p>Employee Management System</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
@@ -87,40 +89,51 @@
 
 <div class="container-fluid text-center">    
   <h3>Skills</h3><br>
-  <div class="row">
+  <div class="row img">
     <div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="pngs/AngularJS.png"  style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="pngs/Azure Devops.png" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="pngs/Azure SQL Database.png" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="pngs/Bash.png" style="width:100%" alt="Image">
     </div>
   </div>
-  <div class="row">
+  <div class="row img">
     <div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="pngs/Bootstrap.png"  style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="pngs/CSS3.png"  style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="pngs/Figma.png"  style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="pngs/Git.png"  style="width:100%" alt="Image">
+    </div>
+  </div>
+  <div class="row img">
+    <div class="col-sm-3">
+      <img src="pngs/HTML5.png"  style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3"> 
+      <img src="pngs/IntelliJ IDEA.png"  style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3"> 
+      <img src="pngs/Java.png"  style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3"> 
+      <img src="pngs/Jenkins.png" style="width:100%" alt="Image">
+    </div>
+  </div>
+  <div class="row img">
+    <div class="col-sm-3"> 
+      <img src="pngs/Visual Studio Code (VS Code).png" style="width:100%; float:inherit" alt="Image">
     </div>
   </div>
 </div><br>
