--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <div class="row">
     <div class="col-sm-4">
       <p>Employee Management System</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="pngs/UPS-Symbol.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Some text..</p>
