--- a/index.html
+++ b/index.html
@@ -74,15 +74,19 @@
   <div class="row">
     <div class="col-sm-4">
       <p>Employee Management System</p>
+      <img class="projectImage" src="pngs/UPS-Symbol.png" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-4">
+      <p>Employee Management System</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+      <p>Bloomington Marketplace</p>
       <img src="pngs/UPS-Symbol.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-4"> 
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
     </div>
   </div>
 </div><br><br>
