--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <div class="row">
     <div class="col-sm-4">
       <p>Employee Management System</p>
-      <img class="projectImage" src="pngs/Rectangle 1.png" class="img-responsive" style="width:100%" alt="Image">
+      <img class="projectImage" src="pngs/UPS-Symbol.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4">
       <p>Employee Management System</p>
