adding other image

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </nav>
 
 <div class="jumbotron">  
-  <img class="text-right profile" src="profile.png">
+  <img class="text-right profile" src="pngs/Component 1.png">
   <div class="container text-left">
     <h1>Aspen Lara</h1>      
     <p class="titles">Software Engineer. Designer. Creative.</p>
