--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="anime-master/anime-master/lib/anime.min.js"></script>
   <script>
+    const anime = require('animejs');
+    import anime from 'animejs/lib/anime.es.js';
+
       $(function(){
           $('a').each(function(){
               if ($(this).prop('href') == window.location.href) {
