--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="anime-master/anime-master/lib/anime.min.js"></script>
   <script>
-    const anime = require('animejs');
-    import anime from 'animejs/lib/anime.es.js';
+    const anime = require('anime-master/anime-master/lib/anime.js');
 
       $(function(){
           $('a').each(function(){
