--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       });
 
       anime({
-        targets: 'div',
+        targets: '#anime',
         translateX: 250,
         rotate: '1turn',
         backgroundColor: '#FFF',
@@ -69,7 +69,7 @@
 
 <div class="jumbotron">  
   <img class="text-right profile" src="pngs/Component 1.png">
-  <div class="container text-left">
+  <div id="anime" class="container text-left">
     <h1>Aspen Lara</h1>      
     <p class="titles">Software Engineer. Designer. Creative.</p>
     <p style="font-size: 16px;">I'm a FullStack Developer from Louisville, KY who works with AngularJS, Java, and SQL. Coding and designing systems are my passion, and I aim to improve user experiences where I can.</p>
