--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="pngs/butterflies.png" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src="anime-master/anime-master/lib/anime.es.js"></script>
+  <script src="anime-master/anime-master/lib/anime.min.js"></script>
   <script>
 
       $(function(){
@@ -19,7 +19,7 @@
           });
       });
 
-      anime({
+      let animation = anime({
         targets: '#anime',
         translateX: 250,
         rotate: '1turn',
