--- a/index.html
+++ b/index.html
@@ -19,14 +19,6 @@
               }
           });
       });
-
-      let animation = anime({
-        targets: '#anime',
-        translateX: 250,
-        rotate: '1turn',
-        backgroundColor: '#FFF',
-        duration: 800
-      });
   </script>
   <style>
     /* Remove the navbar's default margin-bottom and rounded borders */ 
@@ -143,4 +135,6 @@
 </div><br>
 
 </body>
+
+<script src="test.js"></script>
 </html>
